# ML2

./: .gitignore  pyproject.toml
AvT/saved_model/: trained_model
src/00_Hypertune_Reports/hypertune_report_1/: mlt04a.py  mlt04b.py  mlt04c.py  mlt04d.py  mlt04e.py  mlt04f.py  mlt05.py  mlt05b.py
src/00_Hypertune_Reports/hypertune_report_2/: mlt06.py  mlt06b.py
src/00_Hypertune_Reports/hypertune_report_4/: mlt06b_cuda.py  mlt06b_skip.py  mlt06c.py  mlt06c_skip.py  run_matrix_40_no_batchnorm.py  run_matrix_40_no_dropout.py  run_matrix_40_no_dropout_no_batchnorm.py  run_matrix_80.py  run_matrix_80_no_early_stop.py
src/01_NN/: mlt01a.py  mlt01b.py  mlt02.py
src/02_CNN/: 03a_mlflow.py  conv1d.py  shapes_04e.py
src/03_RNN/: first_rnn.py  hypertune.py  rnn_exercize.py  rnn_exercize_01.py  windowing.py
src/04_Tuning_Networks/: 01_hypertuner.py  01b_hypertuner.py  02_ray.py  02b_ray.py  03_minimal_transfer_learning.py  03b_minimal_transfer_learning.py  04_transfer_learning_with_resnel.py  04b_transfer_learning_with_resnet.py
src/05_Attention/: 01_reweighing.py  02_transformer.py  03_attention_gestures.py  04_tokenization.py  05_imbd_preprocessing.py  06_imbd_attention.py  07_metrics.py  08_excercise.py
src/07_Graphs/: 01_intro.py
